--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -1708,9 +1708,469 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>node_id</th>\n",
+       "      <th>betweenness_centrality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Glattbach</td>\n",
+       "      <td>554975225</td>\n",
+       "      <td>0.169023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Glattbach</td>\n",
+       "      <td>159409497</td>\n",
+       "      <td>0.160317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Glattbach</td>\n",
+       "      <td>554975234</td>\n",
+       "      <td>0.158759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Glattbach</td>\n",
+       "      <td>285520525</td>\n",
+       "      <td>0.141150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Glattbach</td>\n",
+       "      <td>280069560</td>\n",
+       "      <td>0.140224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Glattbach</td>\n",
+       "      <td>32115544</td>\n",
+       "      <td>0.139402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Glattbach</td>\n",
+       "      <td>285520743</td>\n",
+       "      <td>0.138565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Glattbach</td>\n",
+       "      <td>29567742</td>\n",
+       "      <td>0.134150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Glattbach</td>\n",
+       "      <td>159409448</td>\n",
+       "      <td>0.131660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Glattbach</td>\n",
+       "      <td>565476079</td>\n",
+       "      <td>0.125933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Mömlingen</td>\n",
+       "      <td>271904139</td>\n",
+       "      <td>0.244653</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Mömlingen</td>\n",
+       "      <td>514351826</td>\n",
+       "      <td>0.213556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Mömlingen</td>\n",
+       "      <td>269153330</td>\n",
+       "      <td>0.178673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Mömlingen</td>\n",
+       "      <td>5167853441</td>\n",
+       "      <td>0.166414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Mömlingen</td>\n",
+       "      <td>298948305</td>\n",
+       "      <td>0.154758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Mömlingen</td>\n",
+       "      <td>530778791</td>\n",
+       "      <td>0.140051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Mömlingen</td>\n",
+       "      <td>3770111714</td>\n",
+       "      <td>0.133212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Mömlingen</td>\n",
+       "      <td>280529475</td>\n",
+       "      <td>0.132719</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Mömlingen</td>\n",
+       "      <td>280529476</td>\n",
+       "      <td>0.126838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Mömlingen</td>\n",
+       "      <td>537516468</td>\n",
+       "      <td>0.126680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Ringheim</td>\n",
+       "      <td>269354314</td>\n",
+       "      <td>0.247421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Ringheim</td>\n",
+       "      <td>4449279826</td>\n",
+       "      <td>0.186579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Ringheim</td>\n",
+       "      <td>269356198</td>\n",
+       "      <td>0.185882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Ringheim</td>\n",
+       "      <td>747099106</td>\n",
+       "      <td>0.182447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Ringheim</td>\n",
+       "      <td>3426708534</td>\n",
+       "      <td>0.181439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Ringheim</td>\n",
+       "      <td>571948550</td>\n",
+       "      <td>0.178320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Ringheim</td>\n",
+       "      <td>6900348755</td>\n",
+       "      <td>0.174142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Ringheim</td>\n",
+       "      <td>571948709</td>\n",
+       "      <td>0.171940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Ringheim</td>\n",
+       "      <td>4448947720</td>\n",
+       "      <td>0.169205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Ringheim</td>\n",
+       "      <td>344479258</td>\n",
+       "      <td>0.155335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Amorbach</td>\n",
+       "      <td>849588889</td>\n",
+       "      <td>0.177364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Amorbach</td>\n",
+       "      <td>417124762</td>\n",
+       "      <td>0.176247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Amorbach</td>\n",
+       "      <td>849588886</td>\n",
+       "      <td>0.175882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Amorbach</td>\n",
+       "      <td>1492422108</td>\n",
+       "      <td>0.174343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Amorbach</td>\n",
+       "      <td>838624503</td>\n",
+       "      <td>0.172522</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Amorbach</td>\n",
+       "      <td>278222380</td>\n",
+       "      <td>0.164890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>Amorbach</td>\n",
+       "      <td>1386508972</td>\n",
+       "      <td>0.161193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Amorbach</td>\n",
+       "      <td>528997314</td>\n",
+       "      <td>0.151319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Amorbach</td>\n",
+       "      <td>1939920354</td>\n",
+       "      <td>0.148578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Amorbach</td>\n",
+       "      <td>2001384066</td>\n",
+       "      <td>0.146971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>Großostheim</td>\n",
+       "      <td>260430921</td>\n",
+       "      <td>0.156709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>Großostheim</td>\n",
+       "      <td>290985198</td>\n",
+       "      <td>0.150259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Großostheim</td>\n",
+       "      <td>290985205</td>\n",
+       "      <td>0.149600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Großostheim</td>\n",
+       "      <td>469929462</td>\n",
+       "      <td>0.149436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Großostheim</td>\n",
+       "      <td>286805450</td>\n",
+       "      <td>0.130329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Großostheim</td>\n",
+       "      <td>4449754440</td>\n",
+       "      <td>0.130074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Großostheim</td>\n",
+       "      <td>3559106813</td>\n",
+       "      <td>0.126341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>Großostheim</td>\n",
+       "      <td>292550115</td>\n",
+       "      <td>0.124625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Großostheim</td>\n",
+       "      <td>5903241141</td>\n",
+       "      <td>0.124348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>Großostheim</td>\n",
+       "      <td>279547570</td>\n",
+       "      <td>0.119965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>Marktheidenfeld</td>\n",
+       "      <td>287108437</td>\n",
+       "      <td>0.252030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>Marktheidenfeld</td>\n",
+       "      <td>1911301510</td>\n",
+       "      <td>0.249564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>Marktheidenfeld</td>\n",
+       "      <td>287108576</td>\n",
+       "      <td>0.246679</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>Marktheidenfeld</td>\n",
+       "      <td>25579437</td>\n",
+       "      <td>0.227775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>Marktheidenfeld</td>\n",
+       "      <td>2190956397</td>\n",
+       "      <td>0.213450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>Marktheidenfeld</td>\n",
+       "      <td>1240267887</td>\n",
+       "      <td>0.212401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>Marktheidenfeld</td>\n",
+       "      <td>287108463</td>\n",
+       "      <td>0.212274</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>Marktheidenfeld</td>\n",
+       "      <td>769384652</td>\n",
+       "      <td>0.190261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>Marktheidenfeld</td>\n",
+       "      <td>11257302388</td>\n",
+       "      <td>0.189422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>Marktheidenfeld</td>\n",
+       "      <td>8917319874</td>\n",
+       "      <td>0.174635</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               city      node_id  betweenness_centrality\n",
+       "0         Glattbach    554975225                0.169023\n",
+       "1         Glattbach    159409497                0.160317\n",
+       "2         Glattbach    554975234                0.158759\n",
+       "3         Glattbach    285520525                0.141150\n",
+       "4         Glattbach    280069560                0.140224\n",
+       "5         Glattbach     32115544                0.139402\n",
+       "6         Glattbach    285520743                0.138565\n",
+       "7         Glattbach     29567742                0.134150\n",
+       "8         Glattbach    159409448                0.131660\n",
+       "9         Glattbach    565476079                0.125933\n",
+       "10        Mömlingen    271904139                0.244653\n",
+       "11        Mömlingen    514351826                0.213556\n",
+       "12        Mömlingen    269153330                0.178673\n",
+       "13        Mömlingen   5167853441                0.166414\n",
+       "14        Mömlingen    298948305                0.154758\n",
+       "15        Mömlingen    530778791                0.140051\n",
+       "16        Mömlingen   3770111714                0.133212\n",
+       "17        Mömlingen    280529475                0.132719\n",
+       "18        Mömlingen    280529476                0.126838\n",
+       "19        Mömlingen    537516468                0.126680\n",
+       "20         Ringheim    269354314                0.247421\n",
+       "21         Ringheim   4449279826                0.186579\n",
+       "22         Ringheim    269356198                0.185882\n",
+       "23         Ringheim    747099106                0.182447\n",
+       "24         Ringheim   3426708534                0.181439\n",
+       "25         Ringheim    571948550                0.178320\n",
+       "26         Ringheim   6900348755                0.174142\n",
+       "27         Ringheim    571948709                0.171940\n",
+       "28         Ringheim   4448947720                0.169205\n",
+       "29         Ringheim    344479258                0.155335\n",
+       "30         Amorbach    849588889                0.177364\n",
+       "31         Amorbach    417124762                0.176247\n",
+       "32         Amorbach    849588886                0.175882\n",
+       "33         Amorbach   1492422108                0.174343\n",
+       "34         Amorbach    838624503                0.172522\n",
+       "35         Amorbach    278222380                0.164890\n",
+       "36         Amorbach   1386508972                0.161193\n",
+       "37         Amorbach    528997314                0.151319\n",
+       "38         Amorbach   1939920354                0.148578\n",
+       "39         Amorbach   2001384066                0.146971\n",
+       "40      Großostheim    260430921                0.156709\n",
+       "41      Großostheim    290985198                0.150259\n",
+       "42      Großostheim    290985205                0.149600\n",
+       "43      Großostheim    469929462                0.149436\n",
+       "44      Großostheim    286805450                0.130329\n",
+       "45      Großostheim   4449754440                0.130074\n",
+       "46      Großostheim   3559106813                0.126341\n",
+       "47      Großostheim    292550115                0.124625\n",
+       "48      Großostheim   5903241141                0.124348\n",
+       "49      Großostheim    279547570                0.119965\n",
+       "50  Marktheidenfeld    287108437                0.252030\n",
+       "51  Marktheidenfeld   1911301510                0.249564\n",
+       "52  Marktheidenfeld    287108576                0.246679\n",
+       "53  Marktheidenfeld     25579437                0.227775\n",
+       "54  Marktheidenfeld   2190956397                0.213450\n",
+       "55  Marktheidenfeld   1240267887                0.212401\n",
+       "56  Marktheidenfeld    287108463                0.212274\n",
+       "57  Marktheidenfeld    769384652                0.190261\n",
+       "58  Marktheidenfeld  11257302388                0.189422\n",
+       "59  Marktheidenfeld   8917319874                0.174635"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def create_graph_for_centrality(df):\n",
     "    G = nx.Graph()\n",
@@ -1759,7 +2219,7 @@
     "    plt.savefig(os.path.join(output_folder, f\"{title.replace(' ', '_')}.png\"))\n",
     "    plt.close()\n",
     "\n",
-    "def get_top_betweennes_centrality_nodes(centrality, top_n=10):\n",
+    "def get_top_betweennes_centrality_nodes(centrality, top_n=5):\n",
     "    return sorted(centrality.items(), key=lambda item: item[1], reverse=True)[:top_n]\n",
     "\n",
     "# Hauptcode\n",
@@ -1787,7 +2247,8 @@
     "        for centrality_name, centrality_values in centrality_indices.items():\n",
     "            visualize_centrality(G, centrality_values, centrality_name.replace(\"_\", \" \").title(), output_folder)\n",
     "\n",
-    "top_nodes_df = pd.DataFrame(collected_data)"
+    "top_nodes_df = pd.DataFrame(collected_data)\n",
+    "top_nodes_df"
    ]
   }
  ],
