Different top nodes for city type

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1735,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,13 +1786,13 @@
     "    plt.savefig(os.path.join(output_folder, f\"{title.replace(' ', '_')}.png\"))\n",
     "    plt.close()\n",
     "\n",
-    "def get_top_betweennes_centrality_nodes(centrality, top_n=10):\n",
+    "def get_top_betweennes_centrality_nodes(centrality, top_n):\n",
     "    return sorted(centrality.items(), key=lambda item: item[1], reverse=True)[:top_n]\n",
     "\n",
-    "def get_top_degree_centrality_nodes(centrality, top_n=10):\n",
+    "def get_top_degree_centrality_nodes(centrality, top_n):\n",
     "    return sorted(centrality.items(), key=lambda item: item[1], reverse=True)[:top_n]\n",
     "\n",
-    "def get_top_closeness_centrality_nodes(centrality, top_n=10):\n",
+    "def get_top_closeness_centrality_nodes(centrality, top_n):\n",
     "    return sorted(centrality.items(), key=lambda item: item[1], reverse=True)[:top_n]\n",
     "\n",
     "# Hauptcode\n",
@@ -1801,9 +1801,16 @@
     "\n",
     "collected_data = []\n",
     "\n",
+    "top_n_map = {\n",
+    "    'village': 10,\n",
+    "    'town': 20,\n",
+    "    'county': 30\n",
+    "}\n",
+    "\n",
     "for subfolder in ['village', 'town']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files = [os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")]\n",
+    "    top_n = top_n_map[subfolder]\n",
     "    for file_path in files:\n",
     "        city_name = os.path.splitext(os.path.basename(file_path))[0]\n",
     "        output_folder = os.path.join(output_base_folder, city_name)\n",
@@ -1813,11 +1820,11 @@
     "        G = create_graph_for_centrality(df)\n",
     "        centrality_indices = calculate_centrality_indices(G)\n",
     "\n",
-    "        #top_nodes = get_top_degree_centrality_nodes(centrality_indices['closeness_centrality'])\n",
-    "        #top_nodes = get_top_degree_centrality_nodes(centrality_indices['degree_centrality'])\n",
-    "        top_nodes = get_top_betweennes_centrality_nodes(centrality_indices['betweenness_centrality'])\n",
+    "        top_nodes = get_top_degree_centrality_nodes(centrality_indices['closeness_centrality'], top_n=top_n)\n",
+    "        #top_nodes = get_top_degree_centrality_nodes(centrality_indices['degree_centrality'], top_n=top_n)\n",
+    "        #top_nodes = get_top_betweennes_centrality_nodes(centrality_indices['betweenness_centrality'], top_n=top_n)\n",
     "        for node_id, centrality_value in top_nodes:\n",
-    "            collected_data.append({'city': city_name, 'node_id': node_id, 'betweenness_centrality': centrality_value})\n",
+    "            collected_data.append({'city': city_name, 'node_id': node_id, 'closeness_centrality': centrality_value})\n",
     "\n",
     "        for centrality_name, centrality_values in centrality_indices.items():\n",
     "            visualize_centrality(G, centrality_values, centrality_name.replace(\"_\", \" \").title(), output_folder)\n",
