Centrality visualization replaced by comparison

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -1735,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1769,22 +1769,22 @@
     "        'betweenness_centrality': betweenness_centrality,\n",
     "    }\n",
     "\n",
-    "def visualize_centrality(G, centrality, title, output_folder):\n",
-    "    pos = nx.get_node_attributes(G, 'pos')\n",
-    "    plt.figure(figsize=(10, 7))\n",
-    "\n",
-    "    nodes = nx.draw_networkx_nodes(G, pos, node_size=10, cmap=plt.cm.plasma,\n",
-    "                                   node_color=list(centrality.values()), alpha=0.8)\n",
-    "    edges = nx.draw_networkx_edges(G, pos, edge_color='grey', alpha=0.5)\n",
-    "\n",
-    "    # Hinzufügen der Farbskala\n",
-    "    cbar = plt.colorbar(nodes)\n",
-    "    cbar.set_label('Centrality Value')\n",
-    "\n",
-    "    plt.title(title)\n",
-    "    plt.axis('off')\n",
-    "    plt.savefig(os.path.join(output_folder, f\"{title.replace(' ', '_')}.png\"))\n",
-    "    plt.close()\n",
+    "#def visualize_centrality(G, centrality, title, output_folder):\n",
+    "#    pos = nx.get_node_attributes(G, 'pos')\n",
+    "#    plt.figure(figsize=(10, 7))\n",
+    "#\n",
+    "#    nodes = nx.draw_networkx_nodes(G, pos, node_size=10, cmap=plt.cm.plasma,\n",
+    "#                                   node_color=list(centrality.values()), alpha=0.8)\n",
+    "#    edges = nx.draw_networkx_edges(G, pos, edge_color='grey', alpha=0.5)\n",
+    "#\n",
+    "#    # Hinzufügen der Farbskala\n",
+    "#    cbar = plt.colorbar(nodes)\n",
+    "#    cbar.set_label('Centrality Value')\n",
+    "#\n",
+    "#    plt.title(title)\n",
+    "#    plt.axis('off')\n",
+    "#    plt.savefig(os.path.join(output_folder, f\"{title.replace(' ', '_')}.png\"))\n",
+    "#    plt.close()\n",
     "\n",
     "def get_top_betweennes_centrality_nodes(centrality, top_n):\n",
     "    return sorted(centrality.items(), key=lambda item: item[1], reverse=True)[:top_n]\n",
@@ -1826,8 +1826,8 @@
     "        for node_id, centrality_value in top_nodes:\n",
     "            collected_data.append({'city': city_name, 'node_id': node_id, 'closeness_centrality': centrality_value})\n",
     "\n",
-    "        for centrality_name, centrality_values in centrality_indices.items():\n",
-    "            visualize_centrality(G, centrality_values, centrality_name.replace(\"_\", \" \").title(), output_folder)\n",
+    "        #for centrality_name, centrality_values in centrality_indices.items():\n",
+    "        #    visualize_centrality(G, centrality_values, centrality_name.replace(\"_\", \" \").title(), output_folder)\n",
     "\n",
     "top_nodes_df = pd.DataFrame(collected_data)"
    ]
@@ -1856,6 +1856,27 @@
     "    G_removed.remove_nodes_from(nodes_to_remove)\n",
     "    return G_removed\n",
     "\n",
+    "def visualize_centrality_comparison(G_original, G_removed, centrality_original, centrality_removed, title, output_folder):\n",
+    "    pos = nx.get_node_attributes(G_original, 'pos')\n",
+    "    plt.figure(figsize=(15, 7))\n",
+    "\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.title(f\"Original {title}\")\n",
+    "    nodes = nx.draw_networkx_nodes(G_original, pos, node_size=10, cmap=plt.cm.plasma,\n",
+    "                                   node_color=list(centrality_original.values()), alpha=0.8)\n",
+    "    edges = nx.draw_networkx_edges(G_original, pos, edge_color='grey', alpha=0.5)\n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.title(f\"After Removal {title}\")\n",
+    "    nodes = nx.draw_networkx_nodes(G_removed, pos, node_size=10, cmap=plt.cm.plasma,\n",
+    "                                   node_color=list(centrality_removed.values()), alpha=0.8)\n",
+    "    edges = nx.draw_networkx_edges(G_removed, pos, edge_color='grey', alpha=0.5)\n",
+    "    plt.axis('off')\n",
+    "\n",
+    "    plt.savefig(os.path.join(output_folder, f\"{title.replace(' ', '_')}_comparison.png\"))\n",
+    "    plt.close()\n",
+    "\n",
     "city_names = []\n",
     "original_lcc_sizes = []\n",
     "new_lcc_sizes = []\n",
@@ -1870,12 +1891,15 @@
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files.extend([os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "\n",
-    "for file in files:\n",
-    "    city_name = os.path.splitext(os.path.basename(file))[0]\n",
+    "for file_path in files:\n",
+    "    city_name = os.path.splitext(os.path.basename(file_path))[0]\n",
+    "    output_folder = os.path.join(output_base_folder, city_name)\n",
+    "    os.makedirs(output_folder, exist_ok=True)\n",
     "    print(f\"Processing {city_name}...\")    \n",
-    "    df = load_from_all_xml(file)\n",
+    "    df = load_from_all_xml(file_path)\n",
     "\n",
     "    G = create_graph_for_centrality(df)\n",
+    "    centrality_indices_original = calculate_centrality_indices(G)\n",
     "\n",
     "    original_lcc_size = calculate_largest_connected_component(G)\n",
     "    original_component_count = calculate_number_of_components(G)\n",
@@ -1883,6 +1907,7 @@
     "\n",
     "    nodes_to_remove = top_nodes_df[top_nodes_df['city'] == city_name]['node_id'].tolist()\n",
     "    G_removed = remove_nodes(G, nodes_to_remove)\n",
+    "    centrality_indices_removed = calculate_centrality_indices(G_removed)\n",
     "\n",
     "    new_lcc_size = calculate_largest_connected_component(G_removed)\n",
     "    new_component_count = calculate_number_of_components(G_removed)\n",
@@ -1894,7 +1919,12 @@
     "    original_component_counts.append(original_component_count)\n",
     "    new_component_counts.append(new_component_count)\n",
     "    original_asp_lengths.append(original_asp_length)\n",
-    "    new_asp_lengths.append(new_asp_length)"
+    "    new_asp_lengths.append(new_asp_length)\n",
+    "\n",
+    "    for centrality_name, centrality_original in centrality_indices_original.items():\n",
+    "        centrality_removed = centrality_indices_removed[centrality_name]\n",
+    "        visualize_centrality_comparison(G, G_removed, centrality_original, centrality_removed,\n",
+    "                                        centrality_name.replace(\"_\", \" \").title(), output_folder)"
    ]
   },
   {
