Betweenness centrality comparison

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -1946,7 +1946,7 @@
     "    return G  \n",
     "\n",
     "def calculate_centrality_indices(G):\n",
-    "    degree_centrality = nx.degree_centrality(G)\n",
+    "    degree_centrality = {node: centrality for node, centrality in nx.degree_centrality(G).items() if G.degree[node] < 7}\n",
     "    closeness_centrality = nx.closeness_centrality(G)\n",
     "    betweenness_centrality = nx.betweenness_centrality(G)\n",
     "\n",
@@ -1976,7 +1976,6 @@
     "def get_top_betweennes_centrality_nodes(centrality, top_n):\n",
     "    return sorted(centrality.items(), key=lambda item: item[1], reverse=True)[:top_n]\n",
     "\n",
-    "# Hauptcode\n",
     "city_folder = \"City_data\"\n",
     "output_base_folder = \"Node centrality\"\n",
     "\n",
@@ -1988,7 +1987,7 @@
     "    'city': 30\n",
     "}\n",
     "\n",
-    "for subfolder in ['village', 'town', 'city']:\n",
+    "for subfolder in ['village', 'town']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files = [os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")]\n",
     "    top_n = top_n_map[subfolder]\n",
@@ -2013,6 +2012,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vergleich vor und nach Löschen der Top-Knoten"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2023,7 +2029,7 @@
     "    if not nx.is_connected(G):\n",
     "        G = G.subgraph(max(nx.connected_components(G), key=len)).copy()\n",
     "    return nx.average_shortest_path_length(G)\n",
-    "    \n",
+    "\n",
     "def calculate_number_of_components(G):\n",
     "    return nx.number_connected_components(G)\n",
     "\n",
@@ -2038,20 +2044,34 @@
     "\n",
     "    plt.subplot(1, 2, 1)\n",
     "    plt.title(f\"Original {title}\")\n",
-    "    nodes = nx.draw_networkx_nodes(G_original, pos, node_size=10, cmap=plt.cm.plasma,\n",
-    "                                   node_color=list(centrality_original.values()), alpha=0.8)\n",
-    "    edges = nx.draw_networkx_edges(G_original, pos, edge_color='grey', alpha=0.5)\n",
+    "    nx.draw(G_original, pos, node_size=10, cmap=plt.cm.plasma,\n",
+    "            node_color=list(centrality_original.values()), alpha=0.8, with_labels=False)\n",
     "    plt.axis('off')\n",
     "    \n",
     "    plt.subplot(1, 2, 2)\n",
     "    plt.title(f\"After Removal {title}\")\n",
-    "    nodes = nx.draw_networkx_nodes(G_removed, pos, node_size=10, cmap=plt.cm.plasma,\n",
-    "                                   node_color=list(centrality_removed.values()), alpha=0.8)\n",
-    "    edges = nx.draw_networkx_edges(G_removed, pos, edge_color='grey', alpha=0.5)\n",
+    "    nx.draw(G_removed, pos, node_size=10, cmap=plt.cm.plasma,\n",
+    "            node_color=list(centrality_removed.values()), alpha=0.8, with_labels=False)\n",
     "    plt.axis('off')\n",
     "\n",
     "    plt.savefig(os.path.join(output_folder, f\"{title.replace(' ', '_')}_comparison.png\"))\n",
     "    plt.close()\n",
+    "\n",
+    "def visualize_comparison_metrics(city_names, original_counts, new_counts, metric_name, output_folder, filename):\n",
+    "    x = range(len(city_names))\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.bar(x, original_counts, width=0.4, label=f'Original {metric_name}', align='center')\n",
+    "    plt.bar(x, new_counts, width=0.4, label=f'New {metric_name}', align='edge')\n",
+    "    plt.xticks(x, city_names, rotation=45)\n",
+    "    plt.ylabel(metric_name)\n",
+    "    plt.title(f'Comparison of {metric_name}')\n",
+    "    plt.legend()\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(output_folder, f\"{filename}.png\"))\n",
+    "    plt.close()\n",
+    "    \n",
+    "city_folder = \"City_data\"\n",
+    "output_base_folder = \"Node centrality\"\n",
     "\n",
     "city_names = []\n",
     "original_component_counts = []\n",
@@ -2059,42 +2079,47 @@
     "original_asp_lengths = []\n",
     "new_asp_lengths = []\n",
     "\n",
-    "city_folder = \"City_data\"\n",
-    "files = []\n",
-    "for subfolder in ['village', 'town', 'city']:\n",
+    "for subfolder in ['village', 'town']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
-    "    files.extend([os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
+    "    files = [os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")]\n",
+    "    for file_path in files:\n",
+    "        city_name = os.path.splitext(os.path.basename(file_path))[0]\n",
+    "        output_folder = os.path.join(output_base_folder, city_name)\n",
+    "        os.makedirs(output_folder, exist_ok=True)\n",
+    "        print(f\"Processing {city_name}...\")    \n",
+    "        df = load_from_all_xml(file_path)\n",
     "\n",
-    "for file_path in files:\n",
-    "    city_name = os.path.splitext(os.path.basename(file_path))[0]\n",
-    "    output_folder = os.path.join(output_base_folder, city_name)\n",
-    "    os.makedirs(output_folder, exist_ok=True)\n",
-    "    print(f\"Processing {city_name}...\")    \n",
-    "    df = load_from_all_xml(file_path)\n",
+    "        G = create_graph_for_centrality(df)\n",
+    "        centrality_indices_original = calculate_centrality_indices(G)\n",
     "\n",
-    "    G = create_graph_for_centrality(df)\n",
-    "    centrality_indices_original = calculate_centrality_indices(G)\n",
+    "        original_component_count = calculate_number_of_components(G)\n",
+    "        original_asp_length = calculate_average_shortest_path_length(G)\n",
     "\n",
-    "    original_component_count = calculate_number_of_components(G)\n",
-    "    original_asp_length = calculate_average_shortest_path_length(G)\n",
+    "        nodes_to_remove = top_nodes_df[top_nodes_df['city'] == city_name]['node_id'].tolist()\n",
+    "        G_removed = remove_nodes(G, nodes_to_remove)\n",
+    "        centrality_indices_removed = calculate_centrality_indices(G_removed)\n",
     "\n",
-    "    nodes_to_remove = top_nodes_df[top_nodes_df['city'] == city_name]['node_id'].tolist()\n",
-    "    G_removed = remove_nodes(G, nodes_to_remove)\n",
-    "    centrality_indices_removed = calculate_centrality_indices(G_removed)\n",
+    "        new_component_count = calculate_number_of_components(G_removed)\n",
+    "        new_asp_length = calculate_average_shortest_path_length(G_removed)\n",
     "\n",
-    "    new_component_count = calculate_number_of_components(G_removed)\n",
-    "    new_asp_length = calculate_average_shortest_path_length(G_removed)\n",
+    "        city_names.append(city_name)\n",
+    "        original_component_counts.append(original_component_count)\n",
+    "        new_component_counts.append(new_component_count)\n",
+    "        original_asp_lengths.append(original_asp_length)\n",
+    "        new_asp_lengths.append(new_asp_length)\n",
     "\n",
-    "    city_names.append(city_name)\n",
-    "    original_component_counts.append(original_component_count)\n",
-    "    new_component_counts.append(new_component_count)\n",
-    "    original_asp_lengths.append(original_asp_length)\n",
-    "    new_asp_lengths.append(new_asp_length)\n",
+    "        visualize_centrality_comparison(\n",
+    "            G, G_removed,\n",
+    "            centrality_indices_original['Betweenness_centrality'],\n",
+    "            centrality_indices_removed['Betweenness_centrality'],\n",
+    "            'Betweenness Centrality',\n",
+    "            output_folder\n",
+    "        )\n",
     "\n",
-    "    for centrality_name, centrality_original in centrality_indices_original.items():\n",
-    "        centrality_removed = centrality_indices_removed[centrality_name]\n",
-    "        visualize_centrality_comparison(G, G_removed, centrality_original, centrality_removed,\n",
-    "                                        centrality_name.replace(\"_\", \" \").title(), output_folder)"
+    "visualize_comparison_metrics(city_names, original_component_counts, new_component_counts, \n",
+    "                             'Number of Components', output_base_folder, \"Number_of_components\")\n",
+    "visualize_comparison_metrics(city_names, original_asp_lengths, new_asp_lengths, \n",
+    "                             'ASP Lengths', output_base_folder, \"ASP_lengths\")\n"
    ]
   },
   {
